--- a/apps/app2/welcome.html
+++ b/apps/app2/welcome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to APP2</title>
+    <title>Welcome to Smart Analytics</title>
     <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.5/dist/keycloak.min.js"></script>
     <link rel="stylesheet" href="../../css/styles.css">
     <style>
@@ -82,7 +82,7 @@
 
 <body>
     <header>
-        <h1>Welcome to App2</h1>
+        <h1>Welcome to Smart Analytics</h1>
     </header>
     <nav>
         <a href="../../home.html" class="nav-link">Home</a>
