--- a/apps/app2/app.html
+++ b/apps/app2/app.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APP2</title>
+    <title>Smart Analytics</title>
     <link rel="stylesheet" href="../../css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.5/dist/keycloak.min.js"></script>
 </head>
