--- a/apps/app3/welcome.html
+++ b/apps/app3/welcome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome to Flashcalls</title>
     <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.5/dist/keycloak.min.js"></script>
     <style>
         body {
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <h1>Welcome to the App3</h1>
+    <h1>Welcome to the Flashcalls</h1>
     <p id="username">Loading user information...</p>
     <div class="button-container">
         <a href="../../home.html">Home</a>
