--- a/user-management.html
+++ b/user-management.html
@@ -5,133 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Management</title>
-    <style>
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background: linear-gradient(to bottom, #e0e7ff, #f5f5f5);
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .container {
-            padding: 20px;
-            max-width: 900px;
-            margin: auto;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header {
-            background: #333;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 28px;
-            letter-spacing: 1px;
-        }
-
-        nav {
-            margin: 20px 0;
-            text-align: center;
-        }
-
-        .nav-link {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .nav-link:hover {
-            background-color: #007BFF;
-            color: white;
-        }
-
-        table#userTable {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background: white;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        table#userTable thead {
-            background-color: #007BFF;
-            color: white;
-        }
-
-        table#userTable th,
-        table#userTable td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        table#userTable tbody tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        table#userTable tbody tr:last-child td {
-            border-bottom: none;
-        }
-
-        .placeholder {
-            text-align: center;
-            font-style: italic;
-            color: gray;
-            height: 50px;
-        }
-
-        .scrollable-list {
-            max-height: 100px;
-            overflow-y: auto;
-            padding: 5px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        .scrollable-list ul {
-            list-style: disc;
-            margin: 0;
-            padding-left: 20px;
-        }
-
-        .scrollable-list li {
-            margin: 2px 0;
-            font-size: 14px;
-            color: #555;
-        }
-
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: auto;
-            border-radius: 8px;
-        }
-
-        footer p {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="css/management.css">
     <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.5/dist/keycloak.min.js"></script>
 </head>
 
@@ -145,7 +19,32 @@
             <button id="logout" class="nav-link">Logout</button>
         </nav>
         <main>
+
+            <!-- Create User Form -->
+            <div class="form-container">
+                <h3>Create User</h3>
+                <label for="username">Username</label>
+                <input type="text" id="username" placeholder="Enter username" required />
+
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Enter email" required />
+
+                <label for="firstName">First Name</label>
+                <input type="text" id="firstName" placeholder="Enter first name" />
+
+                <label for="lastName">Last Name</label>
+                <input type="text" id="lastName" placeholder="Enter last name" />
+
+                <label for="groups">Groups</label>
+                <select id="groups" multiple>
+                    <option value="">Select groups</option>
+                </select>
+
+                <button id="createUserButton">Create User</button>
+            </div>
+
             <h2>Keycloak Users</h2>
+            <!-- Existing User Table -->
             <table id="userTable">
                 <thead>
                     <tr>
@@ -172,9 +71,9 @@
         import { keycloakConfig } from './config.js';
 
         const keycloak = new Keycloak({
-            url: keycloakConfig.url, // Keycloak server URL
-            realm: keycloakConfig.realm, // Realm name
-            clientId: keycloakConfig.app1_client_id // Client ID
+            url: keycloakConfig.url,
+            realm: keycloakConfig.realm,
+            clientId: keycloakConfig.app1_client_id
         });
 
         keycloak.init({
@@ -185,10 +84,84 @@
         }).then(authenticated => {
             if (authenticated) {
                 fetchKeycloakUsers();
+                loadGroups();
             } else {
                 keycloak.login();
             }
         }).catch(error => console.error('Keycloak initialization error:', error));
+
+        async function loadGroups() {
+            try {
+                const response = await fetch(`${keycloakConfig.url}/admin/realms/${keycloakConfig.realm}/groups`, {
+                    headers: { Authorization: `Bearer ${keycloak.token}` }
+                });
+
+                if (!response.ok) throw new Error('Failed to fetch groups');
+
+                const groups = await response.json();
+                const groupsSelect = document.getElementById('groups');
+                groupsSelect.innerHTML = '';
+                groups.forEach(group => {
+                    groupsSelect.innerHTML += `<option value="${group.id}">${group.name}</option>`;
+                });
+            } catch (error) {
+                console.error('Error loading groups:', error);
+            }
+        }
+
+        document.getElementById('createUserButton').addEventListener('click', async () => {
+
+            const username = document.getElementById('username').value.trim();
+            const email = document.getElementById('email').value.trim();
+            const firstName = document.getElementById('firstName').value.trim();
+            const lastName = document.getElementById('lastName').value.trim();
+            const groupsSelect = document.getElementById('groups');
+            const selectedGroups = Array.from(groupsSelect.selectedOptions).map(option => option.value);
+
+            if (!username || !email) {
+                alert('Please fill in Username and Email!');
+                return;
+            }
+
+            try {
+                // Create user payload
+                const userPayload = {
+                    username,
+                    email,
+                    firstName,
+                    lastName,
+                    enabled: true
+                };
+
+                const response = await fetch(`${keycloakConfig.url}/admin/realms/${keycloakConfig.realm}/users`, {
+                    method: 'POST',
+                    headers: {
+                        Authorization: `Bearer ${keycloak.token}`,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(userPayload)
+                });
+
+                if (!response.ok) throw new Error('Failed to create user');
+
+                const locationHeader = response.headers.get('Location');
+                const userId = locationHeader.split('/').pop();
+
+                // Assign groups to user
+                for (const groupId of selectedGroups) {
+                    await fetch(`${keycloakConfig.url}/admin/realms/${keycloakConfig.realm}/users/${userId}/groups/${groupId}`, {
+                        method: 'PUT',
+                        headers: { Authorization: `Bearer ${keycloak.token}` }
+                    });
+                }
+
+                alert('User created successfully');
+                fetchKeycloakUsers(); // Refresh user list
+            } catch (error) {
+                console.error('Error creating user:', error);
+                alert('Error creating user');
+            }
+        });
 
         async function fetchKeycloakUsers() {
             try {
@@ -235,7 +208,7 @@
                 if (!response.ok) throw new Error(`Failed to fetch groups for user ${userId}: ${response.statusText}`);
 
                 const groups = await response.json();
-                return groups.length > 0 ? generateList(data) : 'No Groups';
+                return groups.length > 0 ? generateList(groups) : 'No Groups';
             } catch (error) {
                 console.error(`Error fetching groups for user ${userId}:`, error);
                 return 'Error fetching groups';
@@ -269,8 +242,16 @@
         }
 
         function generateList(items) {
-            const listItems = items.map(item => `<li>${item}</li>`); // Generate array of <li> elements
-            return `<ul>${listItems.join('')}</ul>`; // Join <li> elements into a single <ul>
+            const listItems = items.map(item => {
+                if (typeof item === 'object' && item.name) {
+                    const subGroupList = item.subGroups && item.subGroups.length > 0
+                        ? generateList(item.subGroups) // Recursively generate nested list
+                        : '';
+                    return `<li>${item.name}${subGroupList}</li>`;
+                }
+                return `<li>${item}</li>`;
+            });
+            return `<ul>${listItems.join('')}</ul>`;
         }
 
         document.getElementById('logout').addEventListener('click', () => {
